bitfields/tests/compile_error_cases/errors/arrays/array_msb_fields_overflow.rs
use bitfields::bitfield;

#[bitfield([u8; 2], order = msb)]
pub struct Bitfield {
    a: u8,
    b: u8,
    c: u8,
}

fn main() {}

